<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="410dp"
    android:layout_margin="8dp"
    android:background="@drawable/main_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/edit_txt_border"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="4dp"
                android:padding="2dp"
                android:src="@drawable/ic_phone" />

            <EditText
                android:id="@+id/signup_phone_number_txt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textAlignment="viewStart" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/edit_txt_border"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="4dp"
                android:padding="2dp"
                android:src="@drawable/ic_user" />

            <EditText
                android:id="@+id/signup_user_name_txt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/name"
                android:inputType="text"
                android:textAlignment="viewStart" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <fragment
                android:id="@+id/place_autocomplete_fragment"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/edit_txt_border"
                android:gravity="center"
                android:layoutDirection="rtl"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="4dp"
                    android:padding="2dp"
                    android:src="@drawable/ic_mark_map" />

                <EditText
                    android:id="@+id/signup_location_txt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/address"
                    android:inputType="text"
                    android:textAlignment="viewStart" />

            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Switch
                android:id="@+id/switch_use_current_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/use_curent_location"
                android:textColor="@color/colorAccent"
                android:textSize="14dp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/signup_privacy_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/accepte_conditions"
            android:textColor="@color/colorAccent"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_login_background"
            android:text="@string/create_new_account"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>