<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_splash">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/logo" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/code_confirm"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/on_number"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/confirm_code_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="01020488333"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.mukesh.OtpView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:itemBackground="@color/colorPrimaryDark"
                android:textColor="@color/colorAccent"
                android:padding="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cursorColor="@color/colorAccent"
                app:itemCount="6"
                android:text=""
                app:lineColor="@color/colorPrimaryLight"
                app:viewType="line" />

            <TextView
                android:id="@+id/btnSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/circle_background"
                android:paddingLeft="12dp"
                android:paddingTop="24dp"
                android:paddingRight="12dp"
                android:paddingBottom="24dp"
                android:text="00:20"
                android:textColor="@android:color/white"
                android:textSize="18dp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="4dp"
                android:text="@string/please_wait"
                android:textColor="@android:color/background_light"
                android:textSize="14dp" />


            <Button
                android:id="@+id/confirm_code_btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:background="@drawable/button_signup_background"
                android:text="@string/confirm"
                android:textColor="@color/colorAccent"
                android:textSize="18dp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>