<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_drop_down_black_24dp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/logo" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/name" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/login"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/edit_txt_border"
                android:gravity="center"
                android:layoutDirection="rtl"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="4dp"
                    android:padding="2dp"
                    android:src="@drawable/ic_phone" />

                <EditText
                    android:id="@+id/login_phone_number_txt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textAlignment="viewStart" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/edit_txt_border"
                android:gravity="center"
                android:layoutDirection="rtl"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="4dp"
                    android:padding="2dp"
                    android:src="@drawable/ic_lock_open_black_24dp" />

                <EditText
                    android:id="@+id/login_password_txt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAlignment="viewStart" />

            </LinearLayout>

            <TextView
                android:id="@+id/btnForgetPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="4dp"
                android:text="@string/forget_password"
                android:textColor="@color/colorAccent"
                android:textSize="14dp" />


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_login_background"
                android:text="@string/login"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:background="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/or_login_with"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:background="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/background_white"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="2dp">

                <FrameLayout
                    android:id="@+id/FrameLayout1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1">

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/facebook_login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/btnFacebook"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:elevation="4dp"
                        android:padding="5dp"
                        android:src="@drawable/facebook" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/FrameLayout2"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1">

                    <com.twitter.sdk.android.core.identity.TwitterLoginButton
                        android:id="@+id/twitter_login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />


                    <ImageView
                        android:id="@+id/btnTwitter"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:elevation="4dp"
                        android:padding="5dp"
                        android:src="@drawable/twitter" />

                </FrameLayout>


                <ImageView
                    android:id="@+id/btnGoogle"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:elevation="4dp"
                    android:src="@drawable/icon_google_plus" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="4dp"
                android:text="@string/dont_have_account"
                android:textColor="@android:color/background_light"
                android:textSize="14dp" />


            <Button
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@drawable/button_signup_background"
                android:text="@string/create_new_account"
                android:textColor="@color/colorAccent"
                android:textSize="18dp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>